styles.css
html {
    box-sizing: border-box;
}

*{
    box-sizing: inherit;
}

li {
    margin-bottom: 10px;
}

li button, button {
    font-size: 12px;
    margin-left: 20px;
    color: #666;
    border-radius: 12px;
    font-weight: bold;
    text-transform: uppercase;
    padding: 1em .5em;
}
h1 {
    text-align: center;
    font-size: 3.45em;
}
label{
    font-size: 1.2em;
}
input {
    font-size: 27px;
    border-radius: 12px;
    border-block: 2px solid red;
    margin-top: 10px;

}

